# Reflection

./: .gitignore  .swiftformat  CMakeLists.txt  Package.swift  README.md
Sources/: CMakeLists.txt
Sources/CReflection/: CMakeLists.txt  CReflection.cpp  CReflection.hpp  CopyField.cpp  Demangler.cpp  Demangler.hpp  MetaDump.cpp  MetaDump.hpp  MetadataLookup.cpp  README.md  Reflection.cpp  ReflectionMirror.hpp  Remangler.cpp  Test.cpp  Types.hpp
Sources/CReflection/ABI/: Metadata.hpp
Sources/CReflection/Runtime/: BackDeployment.cpp  CMakeLists.txt  Casting.cpp  CompatibilityOverride.cpp  CompatibilityOverride.def  CompatibilityOverride.h  Demangle.cpp  EnumImpl.h  ErrorObject.h  Errors.cpp  ExistentialContainer.cpp  ExistentialMetadataImpl.h  ImageInspection.h  ImageInspectionELF.h  ImageInspectionMachO.cpp  Metadata.cpp  MetadataCache.h  MetadataImpl.h  MetadataLookup.cpp  Private.h  ProtocolConformance.cpp  ReflectionMirror.mm  SwiftHashableSupport.h  SwiftObject.h  SwiftObject.mm  SwiftValue.h  WeakReference.h
Sources/CReflection/include/: CRDNodeKind.h  CReflection.apinotes  CReflection.h  Config.h  Demangle.h  Demangler.h  MetadataLookup.h  Reflection.h  Test.h  Types.h
Sources/CReflection/llvm/: CMakeLists.txt  Fake.cpp
Sources/Demo/: main.swift
Sources/Reflection/: AnyMetadata.swift  ContextDescriptor.swift  ContextDescriptorKind.swift  Demangler.swift  Dump.swift  ExistentialTypeFlags.swift  Explosion.swift  FieldDescriptor.swift  IO.swift  Metadata.swift  RawContextDescriptor.swift  RawGenericDescriptor.swift  RawMetadata.swift  Reflection.swift  TrailingContainer.swift  TypeContextDescriptorFlags.swift  UnsafePointer.swift  UnsafeRawRepresentable.swift
Sources/Reflection/ContextDescriptor/: AnyContextDescriptor.swift  ContextDescriptor.swift  ContextDescriptorKind.swift  Descriptor.swift  DescriptorAnonymous.swift  DescriptorClass.swift  DescriptorEnum.swift  DescriptorExtension.swift  DescriptorModule.swift  DescriptorOpaqueType.swift  DescriptorProtocol.swift  DescriptorStruct.swift  ExtensionContextDescriptor.swift  GenericContext.swift  GenericParamDescriptor.swift  GenericRequirementDescriptor.swift  GenericRequirementFlags.swift  RawContextDescriptor.swift  TargetGenericContext.swift  TrailingGenericContainer.swift  TypeContextDescriptorFlags.swift  TypeGenericContextDescriptorHeader.swift
Sources/Reflection/Demangle/: BuildDemangling.swift  DNode.swift  Demangle.swift  Demangler.swift  MetadataLookup.swift  ParsedTypeIdentity.swift  Remangler.swift  Resolvers.swift
Sources/Reflection/Metadata/: AnyMetadata.swift  Lookup.swift  Metadata.swift  MetadataAnyClass.swift  MetadataClass.swift  MetadataEnum.swift  MetadataExistentialType.swift  MetadataKind.swift  MetadataLookup.swift  MetadataStruct.swift  MetadataValue.swift  RawMetadata.swift
Sources/Reflection/Reflection/: CustomReflected.swift  Explosion.swift  Mirror.swift  ReflectedProperty.swift  ReflectionMirror.swift
Sources/Reflection/Utilities/: AnyLayout.swift  ArrayRef.swift  FlagSet.swift  RelativePointer.swift  TrailingContainer.swift
Tests/ReflectionTests/: ReflectionTests.swift
Tests/ReflectionTests/ContextDescriptor/: StructDescriptorTests.swift
